--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
-  "name": "socialdev",
-  "version": "1.0.0",
-  "description": "Social Network",
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js"
-  },
-  "author": "laurentiu",
-  "license": "MIT",
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.18.3",
-    "eslint": "^5.1.0",
-    "express": "^4.16.3",
-    "gravatar": "^1.6.0",
-    "jsonwebtoken": "^8.2.2",
-    "mongoose": "^5.1.4",
-    "mongoose-paginate": "^5.0.3",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "validator": "^10.3.0"
-  },
-  "devDependencies": {
-    "nodemon": "^1.17.5"
-  }
+    "name": "socialdev",
+    "version": "1.0.0",
+    "description": "Social Network",
+    "main": "server.js",
+    "scripts": {
+        "client-install": "npm install --prefix client",
+        "start": "node server.js",
+        "server": "nodemon server.js",
+        "client": "npm start --prefix client",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
+    },
+    "author": "laurentiu",
+    "license": "MIT",
+    "dependencies": {
+        "bcryptjs": "^2.4.3",
+        "body-parser": "^1.18.3",
+        "client": "0.0.1",
+        "concurrently": "^3.6.1",
+        "eslint": "^5.1.0",
+        "express": "^4.16.3",
+        "gravatar": "^1.6.0",
+        "jsonwebtoken": "^8.2.2",
+        "kill-port": "^1.3.1",
+        "mongoose": "^5.1.4",
+        "mongoose-paginate": "^5.0.3",
+        "passport": "^0.4.0",
+        "passport-jwt": "^4.0.0",
+        "react-router-dom": "^4.3.1",
+        "validator": "^10.3.0"
+    },
+    "devDependencies": {
+        "create-react-app": "^1.5.2",
+        "nodemon": "^1.18.3"
+    }
 }
